Removed explicit heap size, no benefit anyway